text display on small phone fixed

--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   padding: 2px;
   text-align: center;
-  font-size: 6em;
+  font-size: 5em;
   color: black;
   margin: 0.2em;
 }
@@ -79,7 +79,7 @@ p {
   font-family: Arial, Helvetica, sans-serif;
   padding: 2px;
   text-align: center;
-  font-size: 3em;
+  font-size: 2em;
   color: black;
 }
 
